--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zadanko</title>
+    <style>
+        body{
+            background-color: aqua;
+        }
+    </style>
 </head>
 
 <body>
