--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         body{
             background-color: aqua;
         }
+        h1{
+            color: red;
+        }
+        
     </style>
 </head>
 
