--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         h1{
             color: red;
         }
+        label{
+            font-style: lato;
+        }
         
     </style>
 </head>
