--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Zadanko</title>
     <style>
         body{
-            background-color: aqua;
+            background-color:#e6e6e6;
         }
         h1{
-            color: red;
+            color: #2596be;
         }
         label{
             font-style: lato;
